@@ -1,3 +1,7 @@
+2003-05-05  Bernhard Held <bernhard@bernhardheld.de>
+
+	* sdcc-build-bootstrap.sh: retry `CVS co` in case of failure
+
 2003-05-01  Bernhard Held <bernhard@bernhardheld.de>
 
 	* local/ucf-cf-ppc-macosx-2.mk: added
